; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_fill_directory.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_fill_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_struct = type { i32 }
%struct.index_state = type { i32 }
%struct.pathspec = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fill_directory(%struct.dir_struct* %0, %struct.index_state* %1, %struct.pathspec* %2) #0 {
  %4 = alloca %struct.dir_struct*, align 8
  %5 = alloca %struct.index_state*, align 8
  %6 = alloca %struct.pathspec*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.dir_struct* %0, %struct.dir_struct** %4, align 8
  store %struct.index_state* %1, %struct.index_state** %5, align 8
  store %struct.pathspec* %2, %struct.pathspec** %6, align 8
  %9 = load %struct.pathspec*, %struct.pathspec** %6, align 8
  %10 = call i64 @common_prefix_len(%struct.pathspec* %9)
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load %struct.pathspec*, %struct.pathspec** %6, align 8
  %15 = getelementptr inbounds %struct.pathspec, %struct.pathspec* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  br label %21

20:                                               ; preds = %3
  br label %21

21:                                               ; preds = %20, %13
  %22 = phi i8* [ %19, %13 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %20 ]
  store i8* %22, i8** %7, align 8
  %23 = load %struct.dir_struct*, %struct.dir_struct** %4, align 8
  %24 = load %struct.index_state*, %struct.index_state** %5, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i64, i64* %8, align 8
  %27 = load %struct.pathspec*, %struct.pathspec** %6, align 8
  %28 = call i32 @read_directory(%struct.dir_struct* %23, %struct.index_state* %24, i8* %25, i64 %26, %struct.pathspec* %27)
  %29 = load i64, i64* %8, align 8
  %30 = trunc i64 %29 to i32
  ret i32 %30
}

declare dso_local i64 @common_prefix_len(%struct.pathspec*) #1

declare dso_local i32 @read_directory(%struct.dir_struct*, %struct.index_state*, i8*, i64, %struct.pathspec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
